test/error/MethodAbstractClassNormal.fu
public class Test
{
	protected
		abstract //ERROR: Abstract methods allowed only in an abstract class
		bool Run();
}
